--- a/Server/package.json
+++ b/Server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+  "proxy": "http://localhost:5173",
   "scripts": {
     "start": "nodemon Index"
   },
@@ -17,6 +18,6 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
-    "openai": "^3.2.1"
+    "openai": "^3.1.0"
   }
 }
