--- a/Client/package.json
+++ b/Client/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
+  "proxy": "http://localhost:3000",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
